--- a/magua-ioc/pom.xml
+++ b/magua-ioc/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rookie</artifactId>
+        <artifactId>magua</artifactId>
         <groupId>com.maguasoft</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rookie-ioc</artifactId>
+    <artifactId>magua-ioc</artifactId>
     <packaging>jar</packaging>
 
-    <name>rookie-ioc</name>
+    <name>magua-ioc</name>
     <url>http://maven.apache.org</url>
 
     <properties>
